# internal/app/routers.go
@@ -165,8 +165,8 @@ func (a *App) setupAPIV1Router() {
 			r.Put("/settings/hls-proxy", hlsHandler.UpdateProxySetting)
 			r.Get("/settings/music-path", scanHandler.GetMusicPathSetting)
 			r.Put("/settings/music-path", scanHandler.UpdateMusicPathSetting)
-			r.Get("/settings/scan-auto-create-include-subdirs", scanHandler.GetAutoCreateIncludeSubdirsSetting)
-			r.Put("/settings/scan-auto-create-include-subdirs", scanHandler.UpdateAutoCreateIncludeSubdirsSetting)
+			r.Get("/settings/scan-playlist-mode", scanHandler.GetPlaylistModeSetting)
+			r.Put("/settings/scan-playlist-mode", scanHandler.UpdatePlaylistModeSetting)
 			r.Get("/settings/scan-auto-create-playlists", scanHandler.GetAutoCreatePlaylistsSetting)
 			r.Put("/settings/scan-auto-create-playlists", scanHandler.UpdateAutoCreatePlaylistsSetting)
 			r.Get("/settings/scan-title-source", scanHandler.GetScanTitleSourceSetting)
